--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -310,8 +310,17 @@
     {% sections 'header-group' %}
 
     {% section 'oxedent' %}
-    {%  section 'brand' %}
-
+    {% section 'brand' %}
+    {% section 'gallery' %}
+    {% section 'button_area_one' %}
+    {% section 'pages_ad' %}
+    {% section 'grid_ad' %}
+    {% section 'button_area_two' %}
+    {% section 'result' %}
+    {% section 'video_section' %}
+    {% section 'button_area_three' %}
+    {% section 'small_footer' %}
+    
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
