added all section

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -314,7 +314,7 @@
     {% section 'gallery' %}
     {% section 'button_area_one' %}
     {% section 'pages_ad' %}
-    {% section 'grid_ad' %}
+    {% section 'grid_container' %}
     {% section 'button_area_two' %}
     {% section 'result' %}
     {% section 'video_section' %}
