--- a/sections/brand.liquid
+++ b/sections/brand.liquid
@@ -55,8 +55,8 @@
     margin-bottom: 37px;
   }
   .cards__area {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     margin-bottom: 20px;
   }
