--- a/sections/button_area_one.liquid
+++ b/sections/button_area_one.liquid
@@ -50,6 +50,10 @@
     text-decoration: none;
     font-weight: 600;
     border-radius: 50px;
+    transition: 0.5s;
+  }
+  .button__one__btn a:hover{
+    background-color: #001F51;
   }
   .button__one__btn__icon svg{
     width: 25px;
