project successfully complete

--- a/sections/oxedent.liquid
+++ b/sections/oxedent.liquid
@@ -43,6 +43,10 @@
     font-weight: bold;
     text-decoration: underline;
   }
+  .brand__slogan__title h1{
+    text-align: center;
+    font-weight: bold;
+  }
   .brand__slogan__subTitle p span,
   .brand__slogan__title h1 span {
     color: #ED1479;
@@ -105,7 +109,11 @@
     .grid-container {
       grid-template-columns: repeat(3, 1fr) !important;
     }
+    .metrics-area{
+    grid-template-columns: repeat(2, 1fr) !important;
+    background-color: red !important;
   }
+  } 
 
   @media (max-width: 768px) {
     .container {
