--- a/sections/key_metrics.liquid
+++ b/sections/key_metrics.liquid
@@ -24,6 +24,7 @@
   .metrics-area{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 30px;
   }
   .metrics-item {
     display: flex;
