--- a/sections/brand.liquid
+++ b/sections/brand.liquid
@@ -84,12 +84,13 @@
     margin-bottom: 5px;
   }
   .card p{
-    font-size: 15px;
+    font-size: 16px;
     color: #5C5B5C;
-    font-weight: 400;
+    font-weight: 500;
   }
   .card__button__area{
     padding-bottom: 60px;
+    margin-top: 40px;
   }
 </style>
 {% style %}
