--- a/sections/pages_ad.liquid
+++ b/sections/pages_ad.liquid
@@ -28,8 +28,8 @@
     justify-content: center;
   }
   .ad__page__title {
-    font-size: 40px;
-    color: #3D3D3D;
+    font-size: 38px;
+    color: #001F51;
     text-align: center;
     font-weight: bold;
     padding-bottom: 10px;
